Colour issue fixed. Furniture changes also added